[project]
version = "3.2.10"
authors = [{ name = "fsociety-team", email = "contact@fsociety.dev" }]
description = "A Modular Penetration Testing Framework"
name = "fsociety"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

dependencies = [
    "distro>=1.7.0",
    "GitPython>=3.1.3",
    "requests>=2.32.3",
    "rich>=9.2.0",
    "urllib3>=2.2.2",
]

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "flake8==7.1.0",
    "flake8-black==0.3.6",
    "flake8-comprehensions==3.14.0",
    "flake8-pyproject==",
    "flake8-simplify==0.21.0",
    "isort==5.13.2",
    "mypy==1.8.0",
    "pre-commit==3.6.0",
    "twine==4.0.2",
]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.13"
files = "fsociety"

[tool.mypy-git.*]
ignore_missing_imports = true
